# narrative-trading-system

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: weekly_run.yml
.streamlit/: config.toml  secrets.toml.example
config/: data_sources.yaml  models.yaml  settings.yaml
data/: ablation_results.json
docs/superpowers/plans/: 2026-05-05-data-pipeline-improvement.md  2026-05-05-jury-duty-six-jurors.md
docs/superpowers/specs/: 2026-05-05-council-vote-persistence-design.md  2026-05-05-data-pipeline-improvement-design.md  2026-05-05-jury-duty-six-jurors-design.md  2026-05-06-results-analyst-design.md  2026-05-07-asset-mapping-agent-design.md
scripts/: fetch_historical_data.py  migrate_to_supabase.py  run_ablation.py  run_backtest.py
src/agents/: base.py
src/agents/analysis/: results_analyst.py
src/agents/council/: behavioral_skeptic.py  contrarian.py  quant.py  risk_manager.py  (+2 more)
src/backtest/: attribution.py  baselines.py  engine.py  metrics.py
src/graph/: nodes.py  routing.py  workflow.py
src/portfolio/: constraints.py  cost_model.py  risk.py
src/prompts/: behavioral_skeptic.txt  contrarian.txt  evaluator.txt  macro_sentinel.txt  narrative_analyst.txt  quant.txt  results_analyst.txt  risk_manager.txt  sentiment_scout.txt  strategist.txt  synthesizer.txt
src/state/: schema.py  store.py
src/utils/: logging.py  reproducibility.py  temporal.py
tests/: test_schema_fields.py
tests/agents/: test_results_analyst.py
tests/graph/: test_council_vote_persistence.py  test_jury_duty_persistence.py
(+19 files in other folders)
