[project]
name = "narrative-trading-system"
version = "0.1.0"
description = "Multi-agent narrative-to-portfolio trading system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM & Agent Framework
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",

    # Data
    "yfinance>=0.2.40",
    "fredapi>=0.5.2",
    "finnhub-python>=2.4.28",
    "requests>=2.31.0",
    "feedparser>=6.0.11",
    "praw>=7.7.1",

    # Computation
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",

    # Utilities
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.0",

    # Database
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]
dashboard = [
    "streamlit>=1.35.0",
    "plotly>=5.18.0",
    "altair>=5.3.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
